fix contrast issue in create breakout room modal

--- a/bigbluebutton-html5/imports/ui/components/actions-bar/create-breakout-room/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/actions-bar/create-breakout-room/styles.scss
@@ -19,7 +19,7 @@ input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-i
 .subTitle {
   font-size: var(--font-size-base);
   text-align: justify;
-  color: var(--color-gray-light);
+  color: var(--color-gray);
 }
 
 .breakoutSettings {
